2009-07-07  Jason Merrill  <jason@redhat.com>

	PR c++/35828
	* g++.dg/template/defarg12.C: New.

	PR c++/37816
	* g++.dg/cpp0x/enum7.C: New.

	PR c++/37946
	* g++.dg/cpp0x/enum6.C: New.

	PR c++/40639
	* g++.dg/cpp0x/enum5.C: New.

	PR c++/40633
	* g++.dg/cpp0x/enum4.C: New.

2009-07-07  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40669
	* gcc.dg/pr40669.c: New test.

2009-07-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/40551
	* gfortran.dg/func_assign_2.f90 : New test.

2009-07-04  Jakub Jelinek  <jakub@redhat.com>

	* gfortran.dg/maxloc_1.f90: New test.

2009-07-04  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-07-03  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40640
	* gcc.c-torture/compile/pr40640.c: New testcase.

2009-07-03  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/40587
	* gfortran.dg/pr40587.f: New test.
	
2009-07-03  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/40638
	* gfortran.dg/unit_1.f90: New test.

2009-06-30  Jakub Jelinek  <jakub@redhat.com>

	PR c++/40566
	* g++.dg/parse/cond5.C: New test.

2009-06-30  Jason Merrill  <jason@redhat.com>

	PR c++/40595
	* g++.dg/cpp0x/variadic94.C: New.

2009-06-30  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-06-30  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/40576
	* gfortran.dg/internal_write_1.f90:  New testcase.

	2009-06-30  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/40594
	* gfortran.dg/derived_pointer_recursion_2.f90: New.

2009-06-30  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-06-30  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/40582
	* gcc.c-torture/compile/pr40582.c: New test.

	2009-06-29  Jason Merrill  <jason@redhat.com>

	PR c++/40274
	* g++.dg/template/debug1.C: New.

	2009-06-25  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/40493
	* gcc.c-torture/execute/pr40493.c: New test.

2009-06-30  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/40542